crates/parser/tests/cases/snapshots/cases__errors__self_fn.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(self_fn), module::parse_module, \"pub fn self() {}\")"

---
error: failed to parse function definition
  ┌─ self_fn:1:8
  │
1 │ pub fn self() {}
  │        ^^^^ expected a name, found keyword `self`


